--- a/index4.html
+++ b/index4.html
@@ -10,6 +10,7 @@
 <body>
     This is page 4 in the given folder
     <p>Change is made in remote repository</p>
+    <p>Changes made using second branch</p>
 </body>
 
 </html>
