--- a/index4.html
+++ b/index4.html
@@ -11,6 +11,7 @@
     This is page 4 in the given folder
     <p>Change is made in remote repository</p>
     <p>Changes made using second branch</p>
+    <p>Merging branches</p>
 </body>
 
 </html>
